--- a/index.html
+++ b/index.html
@@ -1,9 +1,108 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Sabbakix</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+<style>
+    * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+    }
+    html {
+        position: relative;
+        min-height: 100%;
+    }
+    body {
+        font-family: Verdana, Helvetica, sans-serif;
+        font-size: 16px;
+        color: #666;
+    }
+    .header {
+        padding: 60px;
+        background-color: #666;
+        color: #fff;
+        text-align: center;
+    }
+    .header h1 {
+        font-size: 2rem;
+    }
+    .navbar {
+        overflow: hidden;
+        background-color: #999;
+    }
+    .navbar a{
+        float: left;
+        display: block;
+        color: #fff;
+        padding: 20px;
+        text-decoration: none;
+    }
+    .navbar a.right {
+        float: right;
+    }
+    .navbar a:hover {
+        background-color: #ddd;
+        color: #000;
+    }
+    .row {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .main {
+        flex:70%;
+        background-color: #fff;
+        padding: 20px;
+        
+    }
+    .footer {
+        padding: 20px;
+        text-align: center;
+        background: #ddd;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        height: 100px;
+        width: 100%;
+        overflow: hidden;
+    }
+    article {
+        padding: 10px 20px;
+        /*border: 1px solid #333;*/
+
+    }
+</style>
 <body>
-    <p>Placehorder</p>
+    <div class="header">
+        <h1>Sabbakix Projects</h1>
+        <p>A confy place where to publish my stuff</p>
+    </div>
+    <div class="navbar">
+        <a href="#">Home</a>
+        <a href="#">Bio</a>
+        <a href="#">Downloads</a>
+        <a href="#" class="right">More</a>
+    </div>
+    <div class="row">
+        <div class="main">
+            <article>
+                <h2 class="title">New update on my stuff </h2>
+                <p>New project updates comming soon.</p>
+            </article>
+            <article>
+                <h2 class="title">Next step ahead</h2>
+                <p>Decisions to be made.</p>
+            </article>
+            <article>
+                <h2 class="title">Old stuff on archive</h2>
+                <p>Older stuff will be available for reference.</p>
+            </article>
+        </div>
+    </div>
+    <div class="footer">
+        <h3>O|O</h3>
+    </div>
 </body>
 </html>
