--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <p>A confy place where to publish my stuff</p>
     </div>
     <div class="navbar">
-        <a href="#">Home</a>
+        <a href="index.html">Home</a>
         <a href="#">Bio</a>
         <a href="#">Downloads</a>
         <a href="#" class="right">More</a>
